# samp-mobile

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: FlytMobile-release-key.jks  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/flyt/mobile/: DonateFragment.kt  DownloadActivity.kt  MainActivity.kt  MainGTA.java  NewsFragment.kt  PlayFragment.kt  SettingsActivity.kt  SettingsFragment.kt  UpdateWorker.kt
app/src/main/java/com/flyt/mobile/gui/: ChooseServer.java  HudManager.java  Menu.java  Notification.java  Speedometer.java
app/src/main/java/com/flyt/mobile/gui/adapters/: DialogMenuAdapter.java
app/src/main/java/com/flyt/mobile/gui/dialogs/: Dialog.java  DialogAdapter.java
app/src/main/java/com/flyt/mobile/gui/models/: DataDialogMenu.java
app/src/main/java/com/flyt/mobile/gui/tab/: PlayerData.java  Tab.java  TabAdapter.java
app/src/main/java/com/flyt/mobile/gui/util/: CustomRecyclerView.java  LambdaMaskedEditText.java  LinearLayoutManagerWrapper.java  Range.java  (+4 more)
app/src/main/java/com/nvidia/devtech/: InputManager.java  NvEventQueueActivity.java
app/src/main/java/org/example/: MainActivity.kt
app/src/main/res/drawable/: custom_progress.xml
app/src/main/res/layout/: activity_download.xml  activity_main.xml  fragment_donate.xml  fragment_news.xml  fragment_play.xml  fragment_settings.xml  settings_activity.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: attrs.xml  styles.xml
